<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/TitleTextStyle"
        android:id="@+id/text_namespace"
        android:layout_marginTop="12dp"
        android:text="@string/text_title_namespace"/>

    <Spinner
        android:id="@+id/spinner_namespace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"/>

    <TextView
        style="@style/TitleTextStyle"
        android:id="@+id/text_data"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp"
        android:text="@string/text_title_data"/>

    <EditText
        android:id="@+id/edit_text_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_data"
        android:inputType="text"/>

    <TextView
        style="@style/ErrorTextStyle"
        android:id="@+id/text_data_error_message"
        android:text="@string/error_message_attachment_data"/>

</LinearLayout>